--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -28,6 +28,6 @@ jobs:
     - name : Install Surge
       run: npm Install -g surge
     - name : Run Surge
-      run : surge ./ bootcampnewapp.surge.sh -- token ${{secret.SURGE_TOKEN}}
+      run : surge ./ bootcampnewapp.surge.sh -- token ${{secrets.SURGE_TOKEN}}
       
          
