--- a/.github/workflows/deploy_surge.yaml
+++ b/.github/workflows/deploy_surge.yaml
@@ -28,6 +28,6 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run : surge ./ bootcamp_piaic_2020.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run : surge ./ bootcamp2020_umair.surge.sh --token ${{secrets.SURGE_TOKEN}}
       
          
